<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="about_text">OpenMCT is a open source multiple choice test app by Guido Krömer. My blog: http://www.cacodaemon.de. This App uses the Iconic icons from: http://somerandomdude.com/work/iconic/</string>
	<string name="about_github">https://github.com/Cacodaimon/AndroidOpenMCT</string>
	<string name="about_github_fork">Fork me on GitHub!</string>
	<string name="app_name">OpenMCT</string>
	<string name="button_download_test_url">Download</string>
	<string name="deleted_test"> has been deleted!</string>
	<string name="download_done">Done downloading</string>
	<string name="download_error">Error downloading</string>
	<string name="download_error_url_format">Invalid url!</string>
	<string name="download_start">Start downloading</string>
	<string name="EvaluateTryAgain">Try again</string>
	<string name="hint_download_test_url">Download</string>
	<string name="label_download_test_url">Enter a url containing a test</string>
	<string name="menu_about">About</string>
	<string name="menu_add">Add</string>
	<string name="menu_settings">Settings</string>
	<string name="startup_button_add">Add</string>
	<string name="startup_button_start">Start</string>
	<string name="startup_label_welcome">Welcome</string>
	<string name="title_activity_about">OpenMCT - About</string>
	<string name="title_activity_download_test">OpenMCT - Download Test</string>
	<string name="title_activity_evaluate_test">OpenMCT</string>
	<string name="title_activity_test">OpenMCT</string>
	<string name="test_next">Next</string>
	<string name="test_pervious">Pervious</string>
	<string name="test_finish">Finish</string>
	<string name="test_hint">Hint</string>
	<string name="test_load_error">Error opening this test.</string>

</resources>