<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DownloadTest" >

    <TextView
        android:id="@+id/textViewDownloadTest"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/label_download_test_url"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editTextUrl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewDownloadTest"
        android:ems="10"
        android:hint="@string/hint_download_test_url"
        android:inputType="textUri"
        android:text="http://www.cacodaemon.de/demos/open_mct/PHP.mct" />

    <Button
        android:id="@+id/buttonDownloadTest"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextUrl"
        android:text="@string/button_download_test_url" />

    <ProgressBar
        android:id="@+id/progressBarDownload"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonDownloadTest"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

</RelativeLayout>